Add login logic and Apply JWT

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 PORT=8080
+DB_USER=aqua_user
+DB_PASS=EeXSzs9sxZCAFk3R
+CNN_STRING=mongodb+srv://aqua_user:EeXSzs9sxZCAFk3R@clusteraqua.1hrjb.mongodb.net/chatDB
+JWT_KEY=5i@nM@rkos
